refactor(user) : jwt util refactor